v7.14.2

v7.14.1
  - Fix "skipped" svg
  - Fix commits ordering

v7.14.0
  - Truncate commit messages after subject line in table
  - Adjust CI config to support Docker executors
  - Added Application Settings
  - Randomize test database for CI tests
  - Make YAML validation stricter
  - Use avatars received from GitLab
  - Refactor GitLab API usage to use either access_token or private_token depending on what was specified during login
  - Allow to use access_token for API requests
  - Fix project API listing returning empty list when first projects are not added to CI
  - Allow to define variables from YAML
  - Added support for CI skipped status
  - Fix broken yaml error saving
  - Add committed_at to commits to properly order last commit (the force push issue)
  - Rename type(s) to stage(s)
  - Fix navigation icons
  - Add missing stage when doing retry
  - Require variable keys to be not-empty and unique
  - Fix variable saving issue
  - Display variable saving errors in variables page not the project's
  - Added Build Triggers API
  
v7.13.1
  - Fix: user could steal specific runner
  - Fix: don't send notifications for jobs with allow_failure set
  - Fix invalid link to doc.gitlab.com

v7.13.0
  - Fix inline edit runner-description
  - Allow to specify image and services in yml that can be used with docker
  - Fix: No runner notification can see managers only
  - Fix service testing for slack
  - Ability to cancel all builds in commit at once
  - Disable colors in rake tasks automatically (if IO is not a TTY)
  - Implemented "rake env:info". Rake task to receive system information
  - Fix coverage calculation on commit page
  - Enhance YAML validation
  - Redirect back after authorization
  - Change favicon
  - Refactoring: Get rid of private_token usage in the frontend.
  - Allow to specify allow_failure for job
  - Build traces is stored in the file instead of database
  - Make the builds path configurable